--- a/app/views/order_mailer/notify_order_placed.html.erb
+++ b/app/views/order_mailer/notify_order_placed.html.erb
@@ -1,7 +1,7 @@
-<h1>Sample App</h1>
+<h1>Dcmovie</h1>
 
 <p>Hi <%= @order.name %></p>
 
 <p>
-Welcome to the Sample App! Click on the link below to activate your account:
+Thanks your order
 </p>
