--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -27,6 +27,10 @@
     <%= form.password_field :password_confirmation , id: :user_password_confirmation, size:40%>
   </div>
 
+ <div class="field">
+    <%= form.label :email, 'Email:' %>
+    <%= form.email_field :email , id: :user_email, size:40%>
+  </div>
   <div class="actions">
     <%= form.submit %>
   </div>
