--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -23,7 +23,7 @@
         <td><%= movie.description %></td>
         <td><%= movie.price %></td>
         <td><%= link_to 'Show', movie %></td>
-        <td><%= link_to 'Booking', edit_movie_path(movie) %></td>
+        <td><%= link_to 'Edit', edit_movie_path(movie) %></td>
         <td><%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
